<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyResume</string>
    <string name="resume">履歴書</string>
    <string name="basic_info">基本情報</string>
    <string name="resume_edit">履歴書編集</string>
    <string name="birthday">生年月日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="present">現在</string>
    <string name="kana">ふりがな</string>
    <string name="family_name">苗字</string>
    <string name="given_name">名前</string>
    <string name="name">氏名</string>
    <string name="turned">満</string>
    <string name="age">年齢</string>
    <string name="years_old">歳</string>
    <string name="sex">性別</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="present_address">現住所</string>
    <string name="postal_code_number">郵便番号</string>
    <string name="phone">電話</string>
    <string name="fax">FAX</string>
    <string name="email">E-Mail</string>
    <string name="callup">方呼出</string>
    <string name="mobile_phs">携帯電話・PHS</string>
    <string name="address">連絡先</string>
    <string name="except_present_address">（現住所以外に連絡を希望する場合のみ記入）</string>
    <string name="school_background">学歴</string>
    <string name="work_experience">職歴</string>
    <string name="license_certify">免許・資格</string>
    <string name="work_motive">志望の動機、特技、好きな学科など</string>
    <string name="hope_entry">本人希望記入欄</string>
    <string name="dialog01">アプリを終了しますか？</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="exit">アプリ終了</string>
    <string name="home">ホーム</string>
    <string name="setup">設定</string>
    <string name="info">情報</string>
    <string name="edit">編集</string>
    <string name="save">保存</string>
    <string name="refresh">更新</string>
    <string name="refresh_ok">更新しました</string>
    <string name="refresh_ng">更新失敗</string>
    <string name="save_ok">保存しました</string>
    <string name="save_ng">保存失敗</string>
    <string name="cancel">キャンセル</string>
    <string name="cancel_ok">キャンセルしました</string>
    <string name="back">戻る</string>
    <string name="forward">進む</string>
    <string name="read_ok">読込完了</string>
    <string name="read_ng">読込失敗</string>

</resources>