<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_edit"
        android:textColor="@color/black" android:textSize="25dp" android:background="@color/gray"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="none" >

            <TextView
                android:id="@+id/txt_family_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/family_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_family_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:maxLength="6"
                android:textColor="@color/black" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/txt_given_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/given_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_given_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:maxLength="6" />

            <TextView
                android:id="@+id/txt_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/black" android:layout_marginTop="10dp"/>

            <RadioGroup
                android:id="@+id/select_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/select_man"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/man" android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/select_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman" android:textColor="@color/black"/>

            </RadioGroup>

            <TextView
                android:id="@+id/txt_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/birthday"
                android:textColor="@color/black" />

            <DatePicker
                android:id="@+id/picker_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="11"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>